# schnorr-protocol

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
src/: main.c
